added get specializations endpoint
