# routes/doctor.js
@@ -9,6 +9,7 @@ import {
   getOfflineConsulations,
   getOnlineConsultation,
   getReviews,
+  getSpecializations,
   patchCertificate,
   postCertificate,
   postClinc,
@@ -16,34 +17,40 @@ import {
   searchByNameOrSpecialization,
 } from '../controllers/doctor.js';
 import { isAdminOrDoctor, isDoctor } from '../middlewares/auth.js';
-import upload from '../utils/upload.js'
+import upload from '../utils/upload.js';
 
 const router = Router();
 
-router
-  .route('/clincs')
-  .post(postClinc)
-  .delete(deleteClinc);
-
 router.get('/', searchByNameOrSpecialization);
 
-router.get('/:id', getDoctorProfile);
+router.get('/specializations', getSpecializations);
+
+router.get('/clincs/:id', getClinc);
 
 router.get('/:id/clincs', getClincs);
+
+router.post('/clincs', isDoctor, postClinc);
+
+router.delete('/clincs/:id', isDoctor, deleteClinc);
+
+router.get('/:id', getDoctorProfile);
 
 router.get('/:id/reviews', getReviews);
 
 router.get('/:id/certificates', getCertificates);
 
-router.post('/certificate', isDoctor, upload.single('image'), postCertificate)
+router.post('/certificate', isDoctor, upload.single('image'), postCertificate);
 
-router.patch('/certificate/:id', isDoctor, upload.single('image'), patchCertificate)
+router.patch(
+  '/certificate/:id',
+  isDoctor,
+  upload.single('image'),
+  patchCertificate
+);
 
-router.delete('/certificate', isDoctor, deleteCertificate)
+router.delete('/certificate/:id', isDoctor, deleteCertificate);
 
 router.post('/auth/signup', postSignup);
-
-router.get('/clincs/:id', getClinc);
 
 router.get('/offline-consultations', isAdminOrDoctor, getOfflineConsulations);
 
